# axum-extractor-config

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: CI.yml  patch.toml
src/: config.rs  lib.rs
src/via_extensions/: mod.rs
src/via_types/: mod.rs
