[package]
name = "axum-extractor-config"
version = "0.1.0"
edition = "2021"

[features]
default = ["json", "query", "form"]

form = ["axum/form", "dep:serde"]
json = ["axum/json", "dep:serde"]
query = ["axum/query", "dep:serde"]

[dependencies]
axum = { version = "0.5", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
tower-layer = "0.3"
tower-service = "0.3"

# optional dependencies
serde = { version = "1.0", optional = true }

[dev-dependencies]
axum = { version = "0.5", features = ["macros"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
