[package]
name = "axum-extractor-config"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5", default-features = false, features = ["json", "query",
"form"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
serde = "1.0"
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
axum = { version = "0.5", features = ["macros"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
